--- a/package.json
+++ b/package.json
@@ -48,5 +48,17 @@
     "eslint-plugin-react": "7.23.2",
     "json-server": "0.15.1",
     "prettier": "2.2.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
